# bucket-viewer

./: .gitignore  Architecture-bucket.excalidraw  README.md
.github/: push_to_ecr.yaml
.github/workflows/: push_to_ecr.yaml  release-frontend.yaml
bucket-viewer-backend/: Dockerfile  main.py  pyproject.toml
bucket-viewer-backend/src/api/: config.py  main.py
bucket-viewer-backend/src/api/routers/: bucket.py  main.py
bucket-viewer-backend/src/services/: bucket.py
bucket-viewer-frontend/: .prettierrc  index.html  package-lock.json  package.json
bucket-viewer-frontend/src/: App.tsx
bucket-viewer-frontend/src/components/: BackButton.tsx  BucketTree.tsx  Upload.tsx
bucket-viewer-frontend/src/hooks/: useBucketData.ts
bucket-viewer-frontend/src/services/: object-service.ts
infrastructure/: main.tf  variable.tf
infrastructure/modules/lambda/: main.tf  variable.tf
infrastructure/modules/oicd_resource/: main.tf
infrastructure/modules/state_locking/: main.tf
