[project]
name = "bucket-viewer-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.19",
    "fastapi[standard]>=0.116.1",
    "mangum>=0.19.0",
    "pydantic-settings>=2.10.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
